Fixing issue where there are multiple recaptcha badges on the site from off screen elements

--- a/wp-content/themes/makercamp-theme/assets/less/custom.less
+++ b/wp-content/themes/makercamp-theme/assets/less/custom.less
@@ -1078,3 +1078,11 @@ img {
 .tooltip.bottom .tooltip-arrow {
   border-bottom-color: #14bcfb;
 }
+
+.grecaptcha-badge {
+  display: none;
+}
+
+.new-footer .grecaptcha-badge {
+  display: block;
+}
